# OptionsTest

./: .dockerignore  Dockerfile  README.md  prepare_alpaca_bot.py  pyproject.toml  run_backtest.py  run_live_bot.py  run_research_pipeline.py  run_search.py  train_heavy_model.py
data_cache/: IWM_2020-01-01_2026-04-09.csv  QQQ_2020-01-01_2026-04-09.csv  SMH_2020-01-01_2026-04-09.csv  SPY_2020-01-01_2026-04-09.csv  TQQQ_2020-01-01_2026-04-09.csv
docker/: run_research.sh
outputs/: credit_spread_optimized_equity_curve.csv  credit_spread_optimized_metrics.json  ml_credit_spread_aggressive_metrics.json  ml_credit_spread_aggressive_signals.csv  ml_credit_spread_moderate_metrics.json
outputs/search/: gcp-search-001_manifest.json  gcp-search-001_progress.json  gcp-search-001_top_monthly_return.csv  gcp-search-001_top_objective.csv  gcp-search-001_top_total_return.csv  strategy_search.sqlite-shm
outputs2/outputs/: credit_spread_optimized_trades.csv  ml_credit_spread_aggressive_candidates.csv  ml_credit_spread_aggressive_equity_curve.csv  ml_credit_spread_aggressive_trades.csv  ml_credit_spread_moderate_equity_curve.csv  ml_credit_spread_moderate_trades.csv
src/options_strategy_lab/: __init__.py  alpaca_adapter.py  data.py  heavy_ml.py  live_bot.py  ml.py  monte_carlo.py  pricing.py  reports.py  research_engine.py  search.py  strategies.py
src/options_strategy_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
