[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-strategy-lab"
version = "0.1.0"
description = "Backtest-first options strategy lab for Alpaca-style deployment."
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.4",
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "scipy>=1.11",
  "threadpoolctl>=3.5",
  "yfinance>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
